--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     					<div class="w3-right w3-hide-small">
       						<a href="index.html" class="w3-bar-item w3-button">Home</a>
       						<a href="ships.html" class="w3-bar-item w3-button">Ships</a>
-      						<a href="about.html" class="w3-bar-item w3-button">Ships</a>
+      						<a href="about.html" class="w3-bar-item w3-button">About</a>
 							<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
 							<a href="reference.html" class="w3-bar-item w3-button">Reference</a>
     					</div>
